@@ -162,7 +162,7 @@ linkend="scheme"> Scheme </link>, the <link linkend="gwrap"> g-wrap
 </glossentry>
 
 <glossentry>
-<glossterm><email>stimming@uclink.berkeley.edu</email>Christian
+<glossterm><email>stimming@tuhh.de</email>Christian
    Stimming</glossterm>
 <glossdef>
 <para>
@@ -907,7 +907,7 @@ Nielsen</glossterm>
 </glossentry>
 
 <glossentry>
-<glossterm><email>stimming@uclink.berkeley.edu</email> Christian
+<glossterm><email>stimming@tuhh.de</email> Christian
       Stimming</glossterm>
 <glossdef>
 <para>report patch</para>
